<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/holo_green_light"
    android:dividerPadding="0dp"
    android:orientation="horizontal">

    <View
        android:id="@+id/side_line"
        android:layout_width="@dimen/reservation_side_line"
        android:layout_height="match_parent"
        android:background="@color/slot_line_free" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/reservation_top_min_height">

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/dash"
                android:textColor="#555151"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/from_time"
                app:layout_constraintTop_toTopOf="@+id/from_time" />

            <TextView
                android:id="@+id/from_time"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="6dp"
                android:textColor="#555151"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="12:15" />

            <TextView
                android:id="@+id/to_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textColor="#555151"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/time_text"
                app:layout_constraintTop_toTopOf="@+id/from_time"
                tools:text="13:45" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reservation_button"
                android:layout_width="@dimen/reservation_button_size"
                android:layout_height="@dimen/reservation_button_size"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/reservation_button_available"
                android:contentDescription="@string/add_reservation_button_description"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="@dimen/reservation_button_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/from_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/from_time"
                tools:ignore="SpeakableTextPresentCheck"
                tools:text="@string/plus" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/bottom_line"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/slot_bottom_line" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/max_reservations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/places_text"
                app:layout_constraintTop_toTopOf="@+id/available_reservations"
                tools:text="20" />

            <TextView
                android:id="@+id/available_reservations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="14" />

            <TextView
                android:id="@+id/places_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/places_available_of"
                app:layout_constraintStart_toEndOf="@+id/available_reservations"
                app:layout_constraintTop_toTopOf="@+id/available_reservations" />

            <ImageView
                android:id="@+id/slot_padlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:background="@android:drawable/ic_lock_idle_lock"
                android:backgroundTintMode="add"
                android:foregroundTintMode="src_atop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_lock_lock"
                app:tint="@android:color/holo_green_light" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>
